# finiky

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: config.toml
src/: config.rs  lib.rs  main.rs  server.rs
src/dhcp/: mod.rs  options.rs  protocols.rs  server.rs
src/filesystem/: directory.rs  mod.rs  tarfs.rs
src/http/: mod.rs  server.rs
src/tftp/: mod.rs  server.rs
tests/: dhcp_tests.rs  filesystem_tests.rs  http_tests.rs  integration_tests.rs  qemu_pxe_test.sh  tftp_tests.rs
tests/fixtures/: README.md
tests/scripts/: cleanup.sh  prepare_pxe_files.sh  setup_tap.sh
