[package]
name = "finiky"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
flate2 = "1.0"
tar = "0.4"
socket2 = { version = "0.5", features = ["all"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
